--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.2",
     "@types/antd": "^1.0.4",
+    "@vercel/edge-config": "^1.4.0",
     "antd": "^5.22.2",
     "next": "15.0.3",
     "react": "18.3.1",
