--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@vercel/edge-config": "^1.4.0",
     "antd": "^5.22.2",
     "next": "15.0.3",
+    "openai": "^4.76.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
